--- a/app.json
+++ b/app.json
@@ -86,6 +86,6 @@
       "manager",
       "Miley"
    ],
-   "name": "Miley",
-   "repository": "https://github.com/Amarnathcdj/Miley"
+   "name": "Harita",
+   "repository": "https://github.com/TeamEviral/HaritaRobot"
 }
